--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="nouislider/nouislider.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <script src="nouislider/nouislider.js"></script>
+  <script src="pristine/pristine.min.js"></script>
   <script src="js/main.js" type="module"></script>
-
   <title>Кексобукинг</title>
 </head>
 <body>
@@ -25,7 +27,7 @@
 
       <!-- Фильтрация объявлений -->
       <div class="map__filters-container">
-        <form action="#" class="map__filters" autocomplete="off">
+        <form action="#" class="map__filters" method="post" enctype="multipart/form-data" autocomplete="off">
           <select name="housing-type" id="housing-type" class="map__filter">
             <option value="any" selected>Любой тип жилья</option>
             <option value="bungalow">Бунгало</option>
@@ -73,7 +75,7 @@
     <!-- Форма объявления -->
     <section class="notice">
       <h2 class="notice__title">Ваше объявление</h2>
-      <form class="ad-form" method="post" enctype="multipart/form-data" autocomplete="off">
+      <form class="ad-form" method="post" enctype="multipart/form-data" autocomplete="off" action="https://26.javascript.pages.academy/keksobooking">
         <fieldset class="ad-form-header">
           <legend class="ad-form-header__title">Ваша фотография (для карты)</legend>
           <div class="ad-form-header__upload">
@@ -89,7 +91,17 @@
         </fieldset>
         <fieldset class="ad-form__element ad-form__element--wide">
           <label class="ad-form__label" for="title">Заголовок объявления</label>
-          <input id="title" name="title" type="text" placeholder="Милая, уютная квартирка в центре Токио">
+          <input id="title"
+                 name="title"
+                 type="text"
+                 placeholder="Милая, уютная квартирка в центре Токио"
+                 minlength="30"
+                 maxlength="100"
+                 required
+                 data-pristine-required-message="Обязательное поле"
+                 data-pristine-minlength-message="Минимальная длина 30 символа"
+                 data-pristine-maxlength-message="Максимальная длина 100 символов"
+          >
         </fieldset>
         <fieldset class="ad-form__element ad-form__element--wide">
           <label class="ad-form__label" for="address">Адрес (координаты)</label>
@@ -107,7 +119,11 @@
         </fieldset>
         <fieldset class="ad-form__element">
           <label class="ad-form__label" for="price">Цена за ночь, руб.</label>
-          <input id="price" name="price" type="number" placeholder="5000">
+          <input id="price" name="price" type="number" placeholder="5000" min="0" max="100000" required
+                 data-pristine-required-message="Обязательное поле"
+                 data-pristine-min-message="Минимальная стоимость 0"
+                 data-pristine-max-message="Максимальная стоимость 100000"
+          >
           <div class="ad-form__slider"></div>
         </fieldset>
         <fieldset class="ad-form__element ad-form__element--time">
