--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
         <fieldset class="ad-form__element">
           <label class="ad-form__label" for="type">Тип жилья</label>
           <select id="type" name="type">
-            <option value="bungalow">Бунгало</option>
-            <option value="flat" selected>Квартира</option>
+            <option value="bungalow" selected>Бунгало</option>
+            <option value="flat">Квартира</option>
             <option value="hotel">Отель</option>
             <option value="house">Дом</option>
             <option value="palace">Дворец</option>
@@ -121,7 +121,6 @@
           <label class="ad-form__label" for="price">Цена за ночь, руб.</label>
           <input id="price" name="price" type="number" placeholder="5000" min="0" max="100000" required
                  data-pristine-required-message="Обязательное поле"
-                 data-pristine-min-message="Минимальная стоимость 0"
                  data-pristine-max-message="Максимальная стоимость 100000"
           >
           <div class="ad-form__slider"></div>
