--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="nouislider/nouislider.css">
+  <link rel="stylesheet" href="leaflet/leaflet.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <script src="nouislider/nouislider.js"></script>
   <script src="pristine/pristine.min.js"></script>
+  <script src="leaflet/leaflet.js"></script>
   <script src="js/main.js" type="module"></script>
   <title>Кексобукинг</title>
 </head>
