--- a/index.html
+++ b/index.html
@@ -248,5 +248,12 @@
     </div>
   </template>
 
+  <!-- Сообщение об ошибке при загрузке данных -->
+  <template id="error-get-data">
+    <div class="error">
+      <p class="error__message">Не удалось загрузить данные</p>
+    </div>
+  </template>
+
 </body>
 </html>
